--- a/pwd.ipynb
+++ b/pwd.ipynb
@@ -60,7 +60,7 @@
     "    <ul>\n",
     "        <li>Determine whether all the countries with a high cost of living have a low fertility rate</li>\n",
     "        <li>Determine whether fertility rate and living expenses correlate with each other </li>\n",
-    "        <li>Find the countries that meet the baseline of the high cost of living<li>\n",
+    "        <li>Find the countries that meet the baseline of the high cost of living</li>\n",
     "        <li>Compare the countries with high living expenses and their fertility rate to the average fertility rate yearly (2015-2020)</li>\n",
     "        <li>Plot graphs to show the difference between the country's fertility rate and the average fertility rate </li> \n",
     "    </ul> \n",
